[refs #2] Initial sgallery upload
* composer dependencies
* sgallery.php
* templates for renata-kowalczuk.eu
* updated build target

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,18 @@
 *~
 
 ##
+# Composer
+/composer.lock
+/composer.phar
+/vendor
+
+
+##
 # Build
 build.properties
-!build.example.properties
 /build
+
+
+## 
+# sGallery
+/sgallery.properties
