--- a/build.xml
+++ b/build.xml
@@ -40,6 +40,7 @@
 			<antcall target="build.css.compress" />
 			<antcall target="build.html" />
 			<antcall target="build.html.assets" />
+			<antcall target="build.html.gallery" />
 		</parallel>
 
 		<tar destfile="${dir.build}/renata-kowalczuk.eu.tgz"
@@ -237,6 +238,13 @@
 				<include name=".htaccess" />
 			</fileset>
 		</copy>
+	</target>
+
+	<target name="build.html.gallery">
+		<exec dir="${dir.base}" command="php">
+			<arg value="sgallery.php"/>
+			<arg value="update"/>
+		</exec>
 	</target>
 
 	<!-- Help Message -->
