Making sure deployment works on Windows

--- a/build.development.properties
+++ b/build.development.properties
@@ -7,3 +7,9 @@ deploy.target = ~/public_html/renata-kowalczuk.vipserv.org/
 deploy.host = renata-kowalczuk.eu
 deploy.user = renatako
 deploy.password =
+
+##
+# Commands on Windows
+#cmd.recess=C:\\Users\\Wiktor\\AppData\\Roaming\\npm\\recess.cmd
+#cmd.php=C:\\Programy\\php\\php.exe
+#cmd.ant=C:\\Programy\\apache-ant-1.9.1\\bin\\ant.bat
