--- a/build.xml
+++ b/build.xml
@@ -10,6 +10,7 @@
 
 	<property name="cmd.recess" value="recess" />
 	<property name="cmd.php" value="php" />
+	<property name="cmd.ant" value="ant" />
 
 	<!-- scp or ftp -->
 	<property name="use.scp" value="true" />
@@ -129,6 +130,7 @@
 			<fileset dir=".">
 				<exclude name="build/**"/>
 				<exclude name="src/**"/>
+				<exclude name="legacy/**"/>
 				<include name="**/*.html"/>
 				<include name="**/*.js"/>
 				<include name="**/*.css"/>
@@ -241,7 +243,7 @@
 	<target name="help"
 		description="Prints help"
 	>
-		<exec executable="ant">
+		<exec executable="${cmd.ant}">
 			<arg value="-p" />
 		</exec>
 	</target>
