[tkt-11] Added contact.html

--- a/build.staging.properties
+++ b/build.staging.properties
@@ -7,6 +7,7 @@ deploy.target = ~/public_html/staging-renata-kowalczuk.vipserv.org/
 deploy.host = renata-kowalczuk.eu
 deploy.user = renatako
 deploy.password =
+deploy.images = false
 
 ##
 # Commands on Windows
