--- a/build.production.properties
+++ b/build.production.properties
@@ -7,6 +7,7 @@ deploy.target = ~/public_html/renata-kowalczuk.eu/
 deploy.host = renata-kowalczuk.eu
 deploy.user = renatako
 deploy.password =
+deploy.images = false
 
 ##
 # Commands on Windows
