--- a/build.xml
+++ b/build.xml
@@ -25,6 +25,7 @@
 		deploy.user
 		deploy.password
 	-->
+	<property name="deploy.images" value="true" />
 
 
 	<!--
@@ -234,25 +235,38 @@
 		<copy todir="${dir.build.out}">
 			<fileset dir="${dir.base}">
 				<include name="index.html" />
+				<include name="contact.html" />
 			</fileset>
 		</copy>
 
 		<exec executable="${cmd.php}">
 			<arg line="src/build-html.php" />
 			<arg line="${dir.build.out}/index.html" />
-
+		</exec>
+		<exec executable="${cmd.php}">
+			<arg line="src/build-html.php" />
+			<arg line="${dir.build.out}/contact.html" />
 		</exec>
 	</target>
 
-	<target name="build.html.assets">
+	<target name="build.html.assets"
+		depends="build.html.assets.images"
+	>
 		<echo level="info">Copying assets to build folder.</echo>
 		<copy todir="${dir.build.out}">
 			<fileset dir="${dir.base}">
 				<include name="images/index/*" />
 				<include name="images/logo.png" />
-				<include name="images/realizacje/**/*.jpg" />
 				<include name="favicon.ico" />
 				<include name=".htaccess" />
+			</fileset>
+		</copy>
+	</target>
+	
+	<target name="build.html.assets.images" if="${deploy.images}">
+		<copy todir="${dir.build.out}">
+			<fileset dir="${dir.base}">
+				<include name="images/realizacje/**/*.jpg" />
 			</fileset>
 		</copy>
 	</target>
