--- a/build.development.properties
+++ b/build.development.properties
@@ -7,6 +7,7 @@ deploy.target = ~/public_html/renata-kowalczuk.vipserv.org/
 deploy.host = renata-kowalczuk.eu
 deploy.user = renatako
 deploy.password =
+deploy.images = true
 
 ##
 # Commands on Windows
