[refs #11] index, kontakt i oferta sa teraz automatycznie generowane
`ant build.html` generuje html :)

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,34 @@
+##
 # IDE ignore files.
+#
 /.buildpath
 /.project
 /.settings
 *.swp
 *~
 
+
+
 ##
+# 3rd parties
+#
 # Composer
 /composer.lock
 /composer.phar
 /vendor
+# Display Service
+/displayService.phar
+/conf/config.yml
+# sGallery
+/sgallery.properties
+
 
 
 ##
 # Build
+#
 build.properties
 /build
 
 
-## 
-# sGallery
-/sgallery.properties
+
