--- a/build.xml
+++ b/build.xml
@@ -277,7 +277,7 @@
 		<copy todir="${dir.build.out}">
 			<fileset dir="${dir.base}">
 				<include name="images/index/*" />
-				<include name="images/logo.png" />
+				<include name="images/logo*.png" />
 				<include name="favicon.ico" />
 				<include name=".htaccess" />
 			</fileset>
