--- a/build.xml
+++ b/build.xml
@@ -276,6 +276,7 @@
 		<echo level="info">Copying assets to build folder.</echo>
 		<copy todir="${dir.build.out}">
 			<fileset dir="${dir.base}">
+				<include name="images/icons/*" />
 				<include name="images/index/*" />
 				<include name="images/logo*.png" />
 				<include name="favicon.ico" />
